Se termino con HTML y CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="icon" href="Imagenes/LOGO.jpg" type="image/png" class="nav-brand">
 </head>
 <body>
-    
+    <div class="menubtn">
+        <i class="fas fa-bars"></i>
+    </div>
     <div class="container">
          <nav class="nav-main">
             <img src="Imagenes/LOGO.jpg" alt="TecNov" class="nav-brand">
@@ -54,7 +56,7 @@
          <!-- showcase -->
           <header class="showcase">
             <h2 class="h2">Grandes noticias del día</h2>
-            <p class="h2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, velit. Laboriosam sint sed esse earum, odit temporibus possimus vitae quia corrupti? Quos facere cupiditate neque explicabo quaerat nam velit doloribus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint vero, distinctio reprehenderit, eos doloribus perferendis a nesciunt alias dolorum temporibus asperiores explicabo blanditiis quidem minus tenetur illo odit aspernatur cumque?</p>
+            <p class="h2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in eaque dignissimos velit minus enim id assumenda officia nobis voluptatum!?</p>
             <a href="#" class="btn">Descubrir más <i class="fas fa-angle-double-right"></i></a>
           </header>
 
@@ -121,7 +123,128 @@
                 <a href="#">Aprender más...</a>
             </div>
            </div>
+
+           <section class="bannercard2">
+            <div class="contenido">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime iste harum tempore vitae voluptates. Labore, amet consectetur libero laudantium cupiditate optio? Neque, nemo velit? Voluptatibus quam accusamus impedit possimus qui.</p>
+                <a href="#" class="btn">Aprender más <i class="fas fa-angle-double-right"></i></a>
+            </div>
+           </section>
+           <section class="social">
+            <p>Follow TecNov</p>
+            <div class="links">
+                <a href="#">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+           </section>
     </div>
+
+    <div class="pielinks">
+        <div class="piecontenedor">
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Titulo1</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Tecnologia</a>
+                </li>
+                <li>
+                    <a href="#">Arboles</a>
+                </li>
+                <li>
+                    <a href="#">Tecnologia</a>
+                </li>
+                <li>
+                    <a href="#">Nuevo</a>
+                </li>
+            </ul>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <h3>Titulo2</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">Blockchain</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Arboles</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Nuevo</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <h3>Titulo3</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">Blockchain</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Arboles</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Nuevo</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <h3>Titulo4</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">Blockchain</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Arboles</a>
+                    </li>
+                    <li>
+                        <a href="#">Tecnologia</a>
+                    </li>
+                    <li>
+                        <a href="#">Nuevo</a>
+                    </li>
+                </ul>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h3>TecNov Copyright</h3>
+    </footer>
+
+    <script src="main.js"></script>
 
 </body>
 </html>
