Se completo la pagina/Se incluyo optimizacion para celular

--- a/index.html
+++ b/index.html
@@ -242,8 +242,10 @@
 
     <footer class="footer">
         <h3>TecNov Copyright</h3>
+        <p>by Santiago Agüero</p>
     </footer>
 
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
 
 </body>
